Fix background color of margin info dropdown in dark mode

--- a/src/components/MarginInfo/index.module.scss
+++ b/src/components/MarginInfo/index.module.scss
@@ -23,6 +23,11 @@
   @media (max-width: 996px) {
     right: 0.5rem;
   }
+
+  [class*="mantine-HoverCard-dropdown"] {
+    background-color: var(--ifm-dropdown-background-color);
+    border-color: transparent;
+  }
 }
 
 [data-arm-annotations="false"] .wrapper {
